Prevent portfolio images from fading on small screens (when filter buttons disappear)

--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -408,7 +408,9 @@ h4 {
     // fading in/out. More info: http://stackoverflow.com/questions/15152470/chrome-rendering-issue-fixed-position-anchor-with-ul-in-body/15203880#15203880
     -webkit-transform: translateZ(0);
     &.faded {
-      opacity: 0.25;
+      @media #{$small} {
+        opacity: 0.25;
+      }
     }
     &:hover {
       background-color: rgba(0,0,0,0.1);
